--- a/app/static/sass/module/_forms.scss
+++ b/app/static/sass/module/_forms.scss
@@ -39,14 +39,91 @@ input[type="text"], input[type="password"], input[type="number"], select, textar
     }
 }
 
-input[type="range"] {
-    width: 100%;
-}
-
 textarea {
     @extend .copy;
     min-height: $line*5;
     font-size: $text;
     line-height: $line;
     padding: $line/2;
+}
+
+input[type="range"] {
+  -webkit-appearance: none;
+  width: 100%;
+}
+input[type="range"]:focus {
+  outline: none;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: none;
+  height: $line*3/4;
+  width: $line/3;
+  border-radius: 0;
+  background: $primary-dark;
+  cursor: pointer;
+  margin-top: -14px;
+}
+input[type="range"]::-moz-range-thumb {
+  border: none;
+  height: $line*3/4;
+  width: $line/3;
+  border-radius: 0;
+  background: $primary-dark;
+  cursor: pointer;
+}
+input[type="range"]::-ms-thumb {
+  border: none;
+  height: $line*3/4;
+  width: $line/3;
+  border-radius: 0;
+  background: $primary-dark;
+  cursor: pointer;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  background: $bg;
+  border-radius: 1.3px;
+  border: 0.2px solid $gray-light;
+}
+input[type="range"]:focus::-webkit-slider-runnable-track {
+    background: $primary;
+}
+input[type="range"]::-moz-range-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  background: $bg;
+  border-radius: 1.3px;
+  border: 0.2px solid $gray-light;
+}
+input[type="range"]:focus::-moz-range-track {
+    background: $primary;
+}
+input[type="range"]::-ms-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+input[type="range"]::-ms-fill-lower {
+  background: $bg;
+  border: 0.2px solid $gray-light;
+}
+input[type="range"]:focus::-ms-fill-lower {
+  background: $primary;
+}
+input[type="range"]::-ms-fill-upper {
+  background: $bg;
+  border: 0.2px solid $gray-light;
+}
+input[type="range"]:focus::-ms-fill-upper {
+  background: $primary;
 }
