--- a/app/templates/colophon.html
+++ b/app/templates/colophon.html
@@ -22,7 +22,7 @@ the frontend. On the flip
 side, it's being delivered to
 you using Python with <a href="http://flask.pocoo.org/" target="_blank">Flask</a>,
 served via <a href="https://www.nginx.com/" target="_blank">nginx</a>, and stored in
-<a href="http://www.postgresql.org/" target="_blank">Postgres</a> by way of <a href="http://www.sqlalchemy.org/" target="_blank">SQLAlchemy</a>.
+<a href="http://www.postgresql.org/" target="_blank">Postgres</a>, all contained in <a href="https://www.docker.com/" target="_blank">Docker</a>.
 It's typeset in <a href="https://www.google.com/fonts/specimen/Lora" target="_blank"><i>Lora</i></a> by <a href="http://www.cyreal.org/" target="_blank">Cyreal</a> and
 <a href="https://www.google.com/fonts/specimen/Lato" target="_blank"><i>Lato</i></a> by <a href="https://www.fontfont.com/designers/lukasz-dziedzic" target="_blank">Łukasz Dziedzic</a>, both
 under the SIL Open Font
