Assume some static pages will be articles

--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -131,9 +131,9 @@
             </aside>
 
             <p class="article-reference">
-                <a href="ethics.htm">Review ethics</a>
-                <a href="ratings.htm">Why listen to me?</a>
-                <a href="glossary.htm">Lingo</a>
+                <a href="/article/ethics/">Review ethics</a>
+                <a href="/article/about/">Why listen to me?</a>
+                <a href="/article/glossary/">Lingo</a>
             </p>
 
         </section>
