--- a/app/templates/review_list.html
+++ b/app/templates/review_list.html
@@ -9,9 +9,9 @@
             <h1 class="title-bar__title">Reviews</h1>
 
             <div class="title-bar__related">
-                <a href="ethics.htm" class="title-bar__related__item">Review ethics</a>
-                <a href="ratings.htm" class="title-bar__related__item">Why listen to me?</a>
-                <a href="glossary.htm" class="title-bar__related__item">Lingo</a>
+                <a href="/article/ethics/" class="title-bar__related__item">Review ethics</a>
+                <a href="/article/about/" class="title-bar__related__item">Why listen to me?</a>
+                <a href="/article/glossary/" class="title-bar__related__item">Lingo</a>
             </div>
         </header>
 
