Move 'about' to main nav

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,6 +37,7 @@
             <nav class="page-nav">
                 <a href="{{ url_for('review_list') }}" class="page-nav__item"><span>Reviews</span></a>
                 <a href="{{ url_for('article_list') }}" class="page-nav__item"><span>Thoughts</span></a>
+                <a href="{{ url_for('view_article', article_name='about') }}" class="page-nav__item"><span>About</span></a>
                 <a href="{{ url_for('colophon') }}" class="page-nav__item page-nav__item--small"><span>Colophon</span></a>
             </nav>
         </div>
