--- a/app/templates/error_401.html
+++ b/app/templates/error_401.html
@@ -5,7 +5,7 @@
 {% block body %}
     <section role="main">
 
-        {{ includes.title_bar("Can't Let You Do That", subtitle=error, modifier='admin') }}
+        {{ includes.title_bar("Can't Let You Do That, Star Fox", subtitle=error, modifier='admin') }}
 
         <div class="content">
             <div class="page-bound error-page">
