--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -131,9 +131,8 @@
             </aside>
 
             <p class="article-reference">
-                <a href="/article/ethics">Review ethics</a>
-                <a href="/article/about">Why listen to me?</a>
-                <a href="/article/glossary">Lingo</a>
+                <a href="{{ url_for('view_article', article_name='ethics') }}">Review ethics</a>
+                <a href="{{ url_for('view_article', article_name='glossary') }}">Lingo</a>
             </p>
 
         </section>
