--- a/app/static/sass/module/_common.scss
+++ b/app/static/sass/module/_common.scss
@@ -18,7 +18,7 @@ a {
   &.bow {
     text-shadow: -1px 0 0 $bg, -2px 0 0 $bg, 1px 0 0 $bg, 2px 0 0 $bg, 0 1px 0 $bg;
     box-shadow: inset 0 -2px 0 $primary;
-    &:hover {
+    &:hover, &:focus {
       color: $bg;
       text-shadow: none;
       box-shadow: inset 0 (-$line) 0 $accent;
@@ -28,7 +28,7 @@ a {
     color: $bg;
     text-shadow: none;
     box-shadow: inset 0 -2px 0 transparentize($bg, 0.5);
-    &:hover {
+    &:hover, &:focus {
       box-shadow: inset 0 (-$line) 0 $accent;
     }
   }
