--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -13,7 +13,7 @@
                 <h2 class="title-bar__subtitle">{{ review.subtitle }}</h2>
             {% endif %}
 
-            <button type="button" class="title-bar__data__toggle" data-toggle-target=".title-bar__data, .article-image">
+            <button type="button" class="title-bar__data__toggle" data-toggle-target=".title-bar__data, .article-image, .article-color">
                 <img src="/static/images/icon-plus.png" alt="Toggle details" />
                 Details
             </button>
