--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -60,6 +60,10 @@
                 <a href="{{ url_for('article_list') }}" class="page-nav__item"><span>Thoughts</span></a>
                 <a href="{{ url_for('view_article', article_name='about') }}" class="page-nav__item"><span>About</span></a>
                 <a href="{{ url_for('colophon') }}" class="page-nav__item page-nav__item--small"><span>Colophon</span></a>
+                <form action="{{ url_for('search') }}" method="GET" class="header-search">
+                    <input type="text" name="q" class="header-search__input" placeholder="Search" value="{{ keywords }}" tabindex="1" />
+                    <button type="submit" class="header-search__submit">Go</button>
+                </form>
             </nav>
         </div>
     </header>
