--- a/app/static/sass/layout/_header.scss
+++ b/app/static/sass/layout/_header.scss
@@ -177,7 +177,7 @@ The global page header
         &__type {
             font-size: $kilo;
             .page-header--home & {
-                color: rgba(255,255,255,0.6);
+                color: rgba(255,255,255,0.8);
                 text-shadow: 0 1px 2px rgba(0,0,0,0.3);
             }
             .page-header--home .header-logo:hover & {
@@ -222,7 +222,7 @@ The global page header
                 }
             }
             .page-header--home & {
-                color: rgba(255,255,255,0.6);
+                color: rgba(255,255,255,0.8);
                 text-shadow: 0 1px 2px rgba(0,0,0,0.3);
                 &:hover {
                     color: #fff;
@@ -254,16 +254,23 @@ The global page header
             transition: all 0.15s ease-out;
         }
         .page-header--home & {
-            bottom: $line*4.75;
+            bottom: auto;
+            top: 188px + $line*5.25;
+            width: 100%;
+            right: 0;
+            padding-right: $line/2;
+            .header-search__submit {
+                right: $line/2 + 1px;
+            }
             .header-search__input:not(:focus) {
                 background: transparent;
                 color: #fff;
                 border-color: #fff;
-                opacity: 0.2;
+                opacity: 0.3;
                 + .header-search__submit {
                     border-left-color: #fff;
                     color: #fff;
-                    opacity: 0.2;
+                    opacity: 0.3;
                 }
             }
         }
