--- a/app/static/sass/layout/_home.scss
+++ b/app/static/sass/layout/_home.scss
@@ -54,9 +54,9 @@ Not much here
     }
 
     .home-more-title {
-        margin-top: $line;
-        color: #fff;
-        text-shadow: 0 1px 2px rgba(0,0,0,0.3);
+        margin-top: $line*6.5;
+        color: $copy;
+        // text-shadow: 0 1px 2px rgba(0,0,0,0.3);
         opacity: 1;
         position: relative;
         z-index: 2;
@@ -69,7 +69,7 @@ Not much here
         height: $line*25;
     }
     .home-more-title {
-        margin: $line*3 0 $line;
+        margin: $line*8.5 0 $line;
         text-align: center;
     }
 }
@@ -92,6 +92,6 @@ Not much here
         height: $line*30;
     }
     .home-more-title {
-        margin-top: $line*5;
+        margin-top: $line*10.5;
     }
 }
