Normalize page titles

--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ review.title }} {{ review.subtitle }} review //{% endblock %}
+{% block title %}{{ review.title }} {{ review.subtitle }} // {% endblock %}
 
 {% block headermodifier %}page-header--article{% endblock %}
 
