--- a/app/static/sass/module/_admin.scss
+++ b/app/static/sass/module/_admin.scss
@@ -22,7 +22,7 @@ Admin
         margin-bottom: 0;
         a {
             display: block;
-            &:hover {
+            &:hover, &:focus {
                 color: $accent;
             }
         }
