--- a/app/templates/admin_base.html
+++ b/app/templates/admin_base.html
@@ -79,7 +79,7 @@
     </footer><!-- .review -->
 
 
-    <script src="/static/js/scripts.js"></script>
+    <script src="/static/js/scripts.min.js"></script>
 
 </body>
 
